# bobikk

./: Makefile  VD_even.py  main.py  pyproject.toml
bobikk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
games_project_chistova/: VD_games.py
games_project_chistova/VD_games/: VD_games.py
games_project_chistova/VD_games/games/: brain_calc.py  brain_gcd.py
games_project_chistova/VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py
